CardType refactor to enum